# E-COMMERCE-FLASK-WEB-APP-V2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose-tools.yml  pyproject.toml
Jenkins/: Jenkinsfile-CD  Jenkinsfile-CI
K8s/: backend.yaml  ingress.yaml  migration-job.yaml  postgres.yaml
migrations/versions/: 66ff2416aac6_initial_migration.py
myapp/: Dockerfile  __init__.py  config.py  extension.py
myapp/Admin/: routes.py
myapp/Users/: routes.py
myapp/decorators/: role.py
myapp/modules/: jwt_callbacks.py  model.py  services.py
myapp/static/: app.js  style.css
myapp/templates/: add_to_cart.html  base.html  cart.html  login.html  products.html  register.html
